workspace-sf/force-app/main/default/objects/LimiteGarantiaProduto__c/LimiteGarantiaProduto__c.object-meta.xml
<CustomObject>
    <description>Objeto para cadastrar os limites de capital das garantias dos Produtos.</description>
    <label>Limite da garantia do produto</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Limites da garantia do produto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>