workspace-sf/force-app/main/default/objects/LimiteGarantiaProduto__c/fields/GarantiaProduto__c.field-meta.xml
<CustomField>
    <fullName>GarantiaProduto__c</fullName>
    <label>Garantia do produto</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Esse registro não pode ser associado com a garantia de um produto comercial.</errorMessage>
        <filterItems>
            <field>GarantiaProduto__c.Produto__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Produto técnico</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GarantiaProduto__c</referenceTo>
    <relationshipLabel>Limites da garantia do produto</relationshipLabel>
    <relationshipName>LimitesGarantiaProduto</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>