workspace-sf/force-app/main/default/objects/LimiteGarantiaProduto__c/validationRules/ValidarLimiteMinimoInferior.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteMinimoInferior</fullName>
    <active>false</active>
    <description>Impede o cadastro de um valor de limite mínimo maior do que o valor do limite máximo.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(LimiteCapitalMaximo__c)),
    LimiteCapitalMinimo__c &gt; LimiteCapitalMaximo__c
)</errorConditionFormula>
    <errorDisplayField>LimiteCapitalMinimo__c</errorDisplayField>
    <errorMessage>O valor do limite de capital mínimo não pode ser maior do que o valor do limite máximo.</errorMessage>
</ValidationRule>