workspace-sf/force-app/main/default/objects/LimiteGarantiaProduto__c/validationRules/ValidarLimiteMinimoNegativo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarLimiteMinimoNegativo</fullName>
    <active>false</active>
    <description>Impede que números negativos sejam cadastrados no campo Limite de Capital Mínimo.</description>
    <errorConditionFormula>LimiteCapitalMinimo__c &lt; 0</errorConditionFormula>
    <errorDisplayField>LimiteCapitalMinimo__c</errorDisplayField>
    <errorMessage>Não é permitido cadastrar números negativos para esse campo. Favor, verifique o valor informado.</errorMessage>
</ValidationRule>